--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,20 @@ set -g prefix C-a # change prefix from ctrl-b to ctrl-a
 # 256 colors for vim
 set -g default-terminal "screen-256color"
 
+# set vi key mode
+setw -g mode-keys vi
+
+# set copy mode (usualy [ and ]) to vim like keys
+# ctrl-a and Escape to enter copy mode, q to exit
+unbind [
+bind Escape copy-mode
+# ctrl-a p pastes text
+unbind p
+bind p paste-buffer
+# v to begin seleciton y to copy selection
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+
 # Start window numbering at 1
 set-option -g base-index 1
 set-window-option -g pane-base-index 1
@@ -38,10 +52,10 @@ bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 unbind C-l
 
 # # split panes like vim
-# bind-key j split-window -v
-# bind-key k split-window -v
-# bind-key h split-window -h
-# bind-key l split-window -h
+bind-key j split-window -v
+bind-key k split-window -v
+bind-key h split-window -h
+bind-key l split-window -h
 
 # Shift + arrows to resize pane
 bind -n S-Left resize-pane -L 2
