--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,6 +17,10 @@ bind p paste-buffer
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
 
+# copy tmux buffer to clipboard using xclip (https://coderwall.com/p/4b0d0a/how-to-copy-and-paste-with-tmux-on-ubuntu)
+# apt-get install xclip
+bind -t vi-copy y copy-pipe "xclip -sel clip -i"
+
 # Start window numbering at 1
 set-option -g base-index 1
 set-window-option -g pane-base-index 1
@@ -26,6 +30,9 @@ bind-key r source-file ~/.tmux.conf \; display "Config reloaded!"
 
 # C-l is taken over by vim style pane navigation
 bind C-l send-keys 'C-l'
+# Clear the pane and it's history
+# bind -n C-k send-keys C-l \; clear-history
+unbind C-l
 
 # mouse on
 set -g mouse on
@@ -46,10 +53,6 @@ bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-
-# Clear the pane and it's history
-# bind -n C-k send-keys C-l \; clear-history
-unbind C-l
 
 # # split panes like vim
 bind-key j split-window -v
