--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,5 @@
-set -g prefix C-a # change prefix from ctrl-b to ctrl-a
+# change prefix from ctrl-b to ctrl-a
+set -g prefix C-a
 
 # 256 colors for vim
 set -g default-terminal "screen-256color"
@@ -26,7 +27,7 @@ set-option -g base-index 1
 set-window-option -g pane-base-index 1
 
 # reload config with a key
-bind-key r source-file ~/.tmux.conf \; display "Config reloaded!"
+kind-key r source-file ~/.tmux.conf \; display "Config reloaded!"
 
 # C-l is taken over by vim style pane navigation
 bind C-l send-keys 'C-l'
@@ -65,6 +66,9 @@ bind -n S-Left resize-pane -L 2
 bind -n S-Right resize-pane -R 2
 bind -n S-Down resize-pane -D 1
 bind -n S-Up resize-pane -U 1
+
+# allow moving between whole words while in the commandline
+set-window-option -g xterm-keys on
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
