--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,7 +27,7 @@ set-option -g base-index 1
 set-window-option -g pane-base-index 1
 
 # reload config with a key
-kind-key r source-file ~/.tmux.conf \; display "Config reloaded!"
+bind-key r source-file ~/.tmux.conf \; display "Config reloaded!"
 
 # C-l is taken over by vim style pane navigation
 bind C-l send-keys 'C-l'
@@ -37,13 +37,6 @@ unbind C-l
 
 # mouse on
 set -g mouse on
-
-## smart pane switching with awareness of vim splits
-#bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
-#bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
-#bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
-#bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
-#bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -78,10 +71,9 @@ set -g @plugin 'seebi/tmux-colors-solarized'
 
 set -g @colors-solarized 'light'
 
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'git@github.com/user/plugin'
-# set -g @plugin 'git@bitbucket.com/user/plugin'
+# give active pane a different color to highlight it
+# overrides solarized color theme
+set -g window-active-style 'bg=#fdf6e3'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
