--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,20 +7,23 @@ set -g default-terminal "screen-256color"
 # set vi key mode
 setw -g mode-keys vi
 
-# set copy mode (usualy [ and ]) to vim like keys
-# ctrl-a and Escape to enter copy mode, q to exit
-unbind [
-bind Escape copy-mode
-# ctrl-a p pastes text
-unbind p
-bind p paste-buffer
-# v to begin seleciton y to copy selection
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+# the following is made redundand because wsl allows copying 
+# with mouse by pushing ctrl while marking and copying/pasting with right-click
 
-# copy tmux buffer to clipboard using xclip (https://coderwall.com/p/4b0d0a/how-to-copy-and-paste-with-tmux-on-ubuntu)
-# apt-get install xclip
-bind -t vi-copy y copy-pipe "xclip -sel clip -i"
+# set copy mode (usualy [ and ]) to vim like keys
+## ctrl-a and Escape to enter copy mode, q to exit
+#unbind [
+#bind Escape copy-mode
+## ctrl-a p pastes text
+#unbind p
+#bind p paste-buffer
+## v to begin seleciton y to copy selection
+##bind-key -t copy-mode-v 'v' begin-selection
+##bind-key -t copy-mode-v 'y' copy-selection
+
+## copy tmux buffer to clipboard using xclip (https://coderwall.com/p/4b0d0a/how-to-copy-and-paste-with-tmux-on-ubuntu)
+## apt-get install xclip
+#bind -t copy-mode-v y copy-pipe "xclip -sel clip -i"
 
 # Start window numbering at 1
 set-option -g base-index 1
@@ -69,11 +72,11 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'seebi/tmux-colors-solarized'
 # set -g @plugin 'christoomey/vim-tmux-navigator'
 
-set -g @colors-solarized 'light'
+set -g @colors-solarized 'dark'
 
 # give active pane a different color to highlight it
 # overrides solarized color theme
-set -g window-active-style 'bg=#fdf6e3'
+set -g window-active-style 'bg=#002b36'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
