--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,7 @@
+[user]
+	email = home@lukastillmann.eu # remember to change this if necessary!
+	name = Lukas Tillmann
 [core]
 	editor = vim
-[user]
-	name = Lukas Tillmann
-	email = lukas.tillmann@manova.at
 [alias]
-  hist = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short
+	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
