updates syntax to new version open new panes in same directory as before

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,19 +11,19 @@ setw -g mode-keys vi
 # with mouse by pushing ctrl while marking and copying/pasting with right-click
 
 # set copy mode (usualy [ and ]) to vim like keys
-## ctrl-a and Escape to enter copy mode, q to exit
-#unbind [
-#bind Escape copy-mode
-## ctrl-a p pastes text
-#unbind p
-#bind p paste-buffer
-## v to begin seleciton y to copy selection
-##bind-key -t copy-mode-v 'v' begin-selection
-##bind-key -t copy-mode-v 'y' copy-selection
+# ctrl-a and Escape to enter copy mode, q to exit
+unbind [
+bind Escape copy-mode
+# ctrl-a p pastes text
+unbind p
+bind p paste-buffer
+# v to begin selection y to copy selection
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection
 
-## copy tmux buffer to clipboard using xclip (https://coderwall.com/p/4b0d0a/how-to-copy-and-paste-with-tmux-on-ubuntu)
-## apt-get install xclip
-#bind -t copy-mode-v y copy-pipe "xclip -sel clip -i"
+# copy tmux buffer to clipboard using xclip (https://coderwall.com/p/4b0d0a/how-to-copy-and-paste-with-tmux-on-ubuntu)
+# apt-get install xclip
+bind-key -T copy-mode-vi 'y' send -X copy-pipe "xclip -sel clip -i"
 
 # Start window numbering at 1
 set-option -g base-index 1
@@ -52,10 +52,11 @@ bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # # split panes like vim
-bind-key j split-window -v
-bind-key k split-window -v
-bind-key h split-window -h
-bind-key l split-window -h
+bind-key j split-window -v -c "#{pane_current_path}"
+bind-key k split-window -v -c "#{pane_current_path}"
+bind-key h split-window -h -c "#{pane_current_path}"
+bind-key l split-window -h -c "#{pane_current_path}"
+
 
 # Shift + arrows to resize pane
 bind -n S-Left resize-pane -L 2
