updates tmux conf to new tmux version, adds resurrect/continuum plugins

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,6 +14,7 @@ setw -g mode-keys vi
 # ctrl-a and Escape to enter copy mode, q to exit
 unbind [
 bind Escape copy-mode
+set-option -s set-clipboard off
 # ctrl-a p pastes text
 unbind p
 bind p paste-buffer
@@ -23,7 +24,8 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection
 
 # copy tmux buffer to clipboard using xclip (https://coderwall.com/p/4b0d0a/how-to-copy-and-paste-with-tmux-on-ubuntu)
 # apt-get install xclip
-bind-key -T copy-mode-vi 'y' send -X copy-pipe "xclip -sel clip -i"
+#bind-key -T copy-mode-vi 'y' send -X copy-pipe "xclip -sel clip -i"
+bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel  "xclip -se c -i"
 
 # Start window numbering at 1
 set-option -g base-index 1
@@ -39,7 +41,7 @@ bind C-l send-keys 'C-l'
 unbind C-l
 
 # mouse on
-set -g mouse on
+set-option -g mouse on
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -71,13 +73,25 @@ set-window-option -g xterm-keys on
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'seebi/tmux-colors-solarized'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 # set -g @plugin 'christoomey/vim-tmux-navigator'
 
 set -g @colors-solarized 'dark'
 
 # give active pane a different color to highlight it
 # overrides solarized color theme
-set -g window-active-style 'bg=#002b36'
+# set -g window-active-style 'bg=#002b36'
+set -g window-active-style 'bg=#003533'
+
+# set key bindings for tmux-resurrect
+bind C-s run-shell ~/.tmux/plugins/tmux-resurrect/scripts/save.sh
+bind C-r run-shell ~/.tmux/plugins/tmux-resurrect/scripts/restore.sh
+
+# tmux-continuum configuration
+set -g @continuum-restore 'on'
+set -g @continuum-save-interval '15'
+set -g status-right 'Continuum status: #{continuum_status}' # display tmux-continuum status in status line
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run -b '~/.tmux/plugins/tpm/tpm'
