--- a/.gitconfig
+++ b/.gitconfig
@@ -11,3 +11,7 @@
     pullr = pull --rebase
     # prettier stash list
     st = stash list --pretty=format:\"%C(red)%h%C(reset) - %C(dim yellow)(%C(bold magenta)%gd%C(dim yellow))%C(reset) %<(70,trunc)%s %C(green)(%ci, %cr) %C(bold blue)<%an>%C(reset)\"
+    # https://stackoverflow.com/a/18317425/5888924
+    ignore = update-index --assume-unchanged
+    unignore = update-index --no-assume-unchanged
+    ignored = !git ls-files -v | grep "^[[:lower:]]"
