add install script for lazygit

--- a/.gitconfig
+++ b/.gitconfig
@@ -16,3 +16,4 @@
    ignore = update-index --assume-unchanged
    unignore = update-index --no-assume-unchanged
    ignored = !git ls-files -v | grep "^[[:lower:]]"
+   dev = checkout develop
