update neovim config, add aerial plugin and more

--- a/.gitconfig
+++ b/.gitconfig
@@ -24,4 +24,4 @@
 [difftool "vscode"]
    cmd = code --wait --diff $LOCAL $REMOTE
 [mergetool "vscode"]
-   cmd = code --wait --merge $LOCAL $REMOTE $MERGED
+   cmd = code --wait --merge $MERGED
