--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,7 +7,7 @@ set -g default-terminal "screen-256color"
 # set vi key mode
 setw -g mode-keys vi
 
-# the following is made redundand because wsl allows copying 
+# the following is made redundand because wsl allows copying
 # with mouse by pushing ctrl while marking and copying/pasting with right-click
 
 # set copy mode (usualy [ and ]) to vim like keys
@@ -51,7 +51,7 @@ bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
 bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+# bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # # split panes like vim
 bind-key j split-window -v -c "#{pane_current_path}"
