--- a/nvim-config/lua/.luarc.json
+++ b/nvim-config/lua/.luarc.json
@@ -28,6 +28,7 @@
         "/usr/local/lib/nvim",
         "/home/lukas/.local/share/nvim/site/pack/packer/start/cmp-nvim-lsp/after",
         "/home/lukas/.local/share/nvim/site/pack/packer/start/cmp_luasnip/after",
-        "${3rd}/luassert/library"
+        "${3rd}/luassert/library",
+        "${3rd}/luv/library"
     ]
 }
