--- a/.tmux.conf
+++ b/.tmux.conf
@@ -74,10 +74,10 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'seebi/tmux-colors-solarized'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
 # set -g @plugin 'christoomey/vim-tmux-navigator'
 
-set -g @colors-solarized 'dark'
+# set -g @colors-solarized 'dark'
 
 # give active pane a different color to highlight it
 # overrides solarized color theme
@@ -89,9 +89,9 @@ bind C-s run-shell ~/.tmux/plugins/tmux-resurrect/scripts/save.sh
 bind C-r run-shell ~/.tmux/plugins/tmux-resurrect/scripts/restore.sh
 
 # tmux-continuum configuration
-set -g @continuum-restore 'on'
-set -g @continuum-save-interval '15'
-set -g status-right 'Continuum status: #{continuum_status}' # display tmux-continuum status in status line
+#set -g @continuum-restore 'on'
+#set -g @continuum-save-interval '15'
+#set -g status-right 'Continuum status: #{continuum_status}' # display tmux-continuum status in status line
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
