tmux copy/paste for macos

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,7 +25,8 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection
 # copy tmux buffer to clipboard using xclip (https://coderwall.com/p/4b0d0a/how-to-copy-and-paste-with-tmux-on-ubuntu)
 # apt-get install xclip
 #bind-key -T copy-mode-vi 'y' send -X copy-pipe "xclip -sel clip -i"
-bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel  "xclip -se c -i"
+# bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel  "xclip -se c -i"
+bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel  "pbcopy"
 
 # Start window numbering at 1
 set-option -g base-index 1
