--- a/.tmux.conf
+++ b/.tmux.conf
@@ -86,8 +86,8 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g window-active-style 'bg=#003533'
 
 # set key bindings for tmux-resurrect
-bind C-s run-shell ~/.tmux/plugins/tmux-resurrect/scripts/save.sh
-bind C-r run-shell ~/.tmux/plugins/tmux-resurrect/scripts/restore.sh
+# bind C-s run-shell ~/.tmux/plugins/tmux-resurrect/scripts/save.sh
+# bind C-r run-shell ~/.tmux/plugins/tmux-resurrect/scripts/restore.sh
 
 # tmux-continuum configuration
 #set -g @continuum-restore 'on'
